--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "jest": "jest",
     "build": "npm run build-ts",
     "build-ts": "tsc",
-    "watch-ts": "tsc -w",
+    "watch-ts": "tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,6 @@
     "typescript": "^2.5.3"
   },
   "dependencies": {
+    "log4js": "^2.3.10"
   }
 }
