--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/assert": "0.0.31",
+    "@types/config": "0.0.33",
     "@types/jest": "^21.1.2",
     "@types/node": "^8.0.31",
     "jest": "^21.2.1",
